PORI-89 Fixed few other layout issues from front page

--- a/drupal/code/themes/custom/kada/src/scss/layout/_page-header.scss
+++ b/drupal/code/themes/custom/kada/src/scss/layout/_page-header.scss
@@ -17,6 +17,7 @@
     // Mobile
     @media screen and (max-width: $mobile-menu-breakpoint-max) {
       background-color: $white;
+      border-bottom: 1px solid $gray-light;
       width: 100%;
       z-index: 100;
     }
